--- a/app/src/main/res/drawable/bg_edit_text.xml
+++ b/app/src/main/res/drawable/bg_edit_text.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/super_light_gray"/>
+    <solid android:color="@color/white"/>
     <corners android:radius="8dp"/>
+    <stroke android:color="@color/dark_gray" android:width="1dp"/>
 </shape>
