--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,16 +2,18 @@
 <resources>
 
     <style name="title_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/dark_gray</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:letterSpacing">-0.05</item>
         <item name="lineHeight">19sp</item>
         <item name="fontFamily">@font/barlow</item>
     </style>
     <style name="sub_title_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/light_gray</item>
         <item name="android:textSize">8sp</item>
-        <item name="android:letterSpacing">0.1</item>
         <item name="lineHeight">10sp</item>
         <item name="fontFamily">@font/barlow</item>
     </style>
@@ -52,7 +54,7 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/dark_gray</item>
         <item name="android:layout_marginTop">12dp</item>
-        <item name="android:layout_toEndOf">@id/deg_textView</item>
+        <item name="android:layout_toEndOf">@id/deg_tv</item>
     </style>
 
     <style name="deg_change_text_style">
